Commit- Added database for profile, and teacher fields in form

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="visa_claims">Visa Claims</string>
     <string name="medical_claims">Medical Claims</string>
     <string name="name">Name</string>
+    <string name="select_teacher">Select Teacher</string>
 </resources>
